--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Space Tourisum</title>
 </head>
+
 <body>
-    <h1>Hey Space Man</h1>
+    <header id="header-wrapper">
+        <div class="logo">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48">
+                <g fill="none" fill-rule="evenodd">
+                    <circle cx="24" cy="24" r="24" fill="#FFF" />
+                    <path fill="#0B0D17"
+                        d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z" />
+                </g>
+            </svg>
+        </div>
+
+        <div id="line-effect">
+
+        </div>
+        <nav id="nav-bar-wrapper">
+            <ul id="nav-bar-links">
+                <li class="link-items">
+                    <span class="number">00</span>
+                    <a href="/home">Home</a>
+                </li>
+                <li class="link-items">
+                    <span class="number">01</span>
+                    <a href="">Destination</a>
+                </li>
+                <li class="link-items">
+                    <span class="number">02</span>
+                    <a href="">Crew</a>
+                </li>
+                <li class="link-items">
+                    <span class="number">03</span>
+                    <a href="">Technology</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
+<script src="./source.js"></script>
+
 </html>
